# hooks

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: ghci.yaml  renovate.json5
.github/workflows/: changelog.yaml  dependabot-auto-merge.yaml  main.yaml
ci/: config.yaml  requirements.txt
pre_commit_copyright/: __init__.py
pre_commit_hooks/: copyright.py  run_in_dir.py
sbrunner_hooks/: __init__.py  canonicalize.py  copyright.py  prospector_to_ruff.py  run_in_dir.py  workflow_timeout.py
sbrunner_pre_commit_hooks/: copyright.py
tests/: Pipfile  canonicalize_test.py  copyright_test.py
